# novel-local-ai-open-source

./: .gitignore  AGENTS.md  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  PROJECT_HANDOFF.md  README.md  SECURITY.md
services/api/: alembic.ini  pyproject.toml
services/api/app/: db.py  main.py
services/api/app/agents/: __init__.py  base.py  checkers.py  writer.py
services/api/app/models/: __init__.py  auto_entities.py  entities.py  loop_entities.py
services/api/app/pipelines/: chapter_pipeline.py
services/api/app/prompts/: chapter_generation.md  chapter_review.md  chapter_summary.md  character_state_update.md  continuity_check.md  outline_expand.md  story_map_extraction.md
services/api/app/providers/: adapters.py  base.py
services/api/app/routers/: activity.py  auto_runs.py  canon.py  chapters.py  characters.py  creative.py  deconstruction.py  export.py  generation_runs.py  loop_runs.py  model_providers.py  multi_chapter_runs.py  novels.py  projects.py  prompts.py  references.py  story_map.py  (+3 more)
services/api/migrations/: env.py
services/api/tests/: conftest.py  test_activity.py  test_adapter_token_param.py  test_api.py  test_deconstruction_async.py  test_deconstruction_combined.py  test_deconstruction_forward.py  test_deconstruction_refine.py  test_loop_mvp_e2e.py  test_loop_runner.py  test_loop_stability.py  test_mvp3_auto_pipeline.py  test_mvp3_multi_chapter.py  test_novel_chunker.py  test_pastiche.py  test_prompt_registry.py  test_role_providers.py  test_story_engineering_forward.py  test_story_map.py  test_story_memory_state.py
(+198 files in other folders)
